readme: add usage and description

--- a/TODO
+++ b/TODO
@@ -13,3 +13,6 @@ Testing:
 Improvements:
     ☐ add CivKey.INVALID as a constant
     ☐ error handling throughout
+
+Documentation:
+    ☐ write up how to deploy to heroku in readme
